--- a/megaSite_feed/megaSite_feed/Views/FavoritesPage.xaml
+++ b/megaSite_feed/megaSite_feed/Views/FavoritesPage.xaml
@@ -1,23 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="megaSite_feed.Views.ItemsPage"
+             x:Class="megaSite_feed.Views.FavoritesPage"
              Title="{Binding Title}"
              xmlns:local="clr-namespace:megaSite_feed.ViewModels"  
-             xmlns:model="clr-namespace:megaSite_feed.Models"  
-             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-             x:Name="BrowseItemsPage">
-
-    <!--
-      x:DataType enables compiled bindings for better performance and compile time validation of binding expressions.
-      https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/data-binding/compiled-bindings
-    -->
-    <RefreshView x:DataType="local:ItemsViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+             xmlns:model="clr-namespace:megaSite_feed.Models"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms">
+    
+    <RefreshView x:DataType="local:FavoritesViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="ItemsListView"
-                ItemsSource="{Binding NewsItems}"
+                ItemsSource="{Binding Items}"
                 SelectionMode="None">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate >
                     <StackLayout Padding="0,3,0,0" x:DataType="model:News" BackgroundColor="#fff" >
                         <StackLayout Padding="10"  BackgroundColor="#ededed">
                             <Label Text="{Binding Headline}"  Style="{DynamicResource ListItemTextStyle}" 
@@ -32,7 +27,7 @@
                             <StackLayout.GestureRecognizers>
                                 <TapGestureRecognizer 
                                 NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:FavoritesViewModel}}, Path=ItemTapped}"		
                                 CommandParameter="{Binding .}">
                                 </TapGestureRecognizer>
                             </StackLayout.GestureRecognizers>
